<!--
  ~ Copyright 2015 GDG Minsk
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            tools:context=".NotificatonHome">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <CheckBox
            android:id="@+id/use_heads_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_heads_up"/>

        <CheckBox
            android:id="@+id/use_notification_to_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/use_heads_up"
            android:text="@string/use_notification_to_play"/>

        <CheckBox
            android:id="@+id/play_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/use_notification_to_play"
            android:text="@string/play_sound"/>

        <CheckBox
            android:id="@+id/vibrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/play_sound"
            android:text="@string/vibrate"/>

        <CheckBox
            android:id="@+id/local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/vibrate"
            android:text="@string/local_notification"/>

        <CheckBox
            android:id="@+id/use_attrs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/local"
            android:text="@string/use_audio_attributes"/>

        <TextView
            android:id="@+id/message_type_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/use_attrs"
            android:text="@string/message_type"/>

        <RadioGroup
            android:id="@+id/message_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/message_type_label"
            android:checkedButton="@+id/short_message">

            <RadioButton
                android:id="@+id/short_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_type_short"/>

            <RadioButton
                android:id="@+id/long_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_type_long"/>
        </RadioGroup>

        <TextView
            android:id="@+id/priorities_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/message_type"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="15dp"
            android:paddingTop="4dp"
            android:text="@string/priorities_label"/>

        <Spinner
            android:id="@+id/priorities_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/priorities_label"
            android:layout_toEndOf="@id/priorities_label"/>

        <TextView
            android:id="@+id/visibility_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/priorities_label"
            android:layout_marginTop="16dp"
            android:paddingTop="4dp"
            android:text="@string/visibility_label"/>

        <Spinner
            android:id="@+id/visibility_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/priorities_spinner"
            android:layout_alignTop="@id/visibility_label"
            android:layout_toEndOf="@id/visibility_label"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/visibility_label"
            android:layout_above="@+id/send_call"/>

        <Space
            android:id="@+id/anchor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/send_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="160dp"
            android:layout_toStartOf="@id/anchor"
            android:layout_alignParentBottom="true"
            android:text="@string/btn_call"/>

        <Button
            android:id="@+id/send_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="180dp"
            android:layout_toEndOf="@id/anchor"
            android:layout_alignParentBottom="true"
            android:text="@string/btn_message"/>
    </RelativeLayout>
</ScrollView>